# Multi-Agent-Workflow-Orchestrator-Restaurants

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
docs/: api_reference.md  architecture.md
scripts/: reset_state.py  seed_data.py  validate_setup.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base.py  delivery_agent.py  inventory_agent.py  kitchen_agent.py  orchestrator.py  order_agent.py  support_agent.py
src/api/: routes.py  websocket.py
src/models/: __init__.py  conversation.py  customer.py  driver.py  inventory.py  order.py
src/state/: __init__.py  conversation.py  manager.py  workflow.py
src/tools/: __init__.py
src/utils/: __init__.py  logging.py  prompts.py  tracing.py
tests/: conftest.py
tests/test_agents/: test_base.py
